--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,12 @@ body{
     border: 1px black solid;
 }
 
-.textcarousel{
+.textcarousel {
+}
 
+#sessaoMapa h1{
+    justify-content: center !important;
+    vertical-align: middle !important;
 }
 
 .linksin{
@@ -58,7 +62,22 @@ body{
 
 footer{
     margin-top: 30px;
-    padding: 0;
-    height: 100px;
     background-color: #0E4749;
+    color: white;
+}
+
+#toTop {
+    display: none;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    overflow: hidden;
+    width: 51px;
+    height: 51px;
+    border: none;
+    color: black;
+}
+
+#toTop img{
+    width: 100%;
 }
